# oufoaler

./: .gitignore  .mise.toml  Dockerfile  README.md  Taskfile.yml  mise.toml  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: main_oufoaler.yml
oufoaler/: app.py  config.py  logger.py  soap_api.py
oufoaler/controllers/: car_controller.py  charging_station_controller.py  itinerary_controller.py
oufoaler/models/: api.py  car.py  charging_station.py  settings.py
oufoaler/views/: api.py
oufoaler/views/static/css/: style.css
oufoaler/views/static/js/: main.js
oufoaler/views/templates/: index.html
oufoaler/views/templates/parts/: _base.html  _footer.html  _header.html
